--- a/lambdaSC.cabal
+++ b/lambdaSC.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 47bf83a5086817197e2d16d070f69c84a38352a82e22012398c26df8b2718613
+-- hash: 60ffe6201cd8a48cd768ef289ac67d66615a0b5db2f639ab78d34ec434f4a462
 
 name:           lambdaSC
 version:        0.1.0.0
@@ -33,13 +33,16 @@ library
       Lexer
       Parser
       PrettyPrinter
+      Substitution
       Syntax
+      TypeInference
   other-modules:
       Paths_lambdaSC
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , containers
     , mtl
     , parsec
   default-language: Haskell2010
@@ -53,6 +56,7 @@ executable lambdaSC-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , lambdaSC
     , mtl
     , parsec
@@ -68,6 +72,7 @@ test-suite lambdaSC-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , lambdaSC
     , mtl
     , parsec
